@@ -6,14 +6,16 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public enum DocumentStatus {
 
-  DRAFT(List.of(DocumentEdited.class, DocumentVerified.class, DocumentArchived.class)),
-  VERIFIED(List.of(DocumentPublished.class, DocumentEdited.class)),
-  PUBLISHED(List.of(DocumentPublished.class, DocumentArchived.class)),
+  DRAFT(Arrays.asList(DocumentEdited.class, DocumentVerified.class, DocumentArchived.class)),
+  VERIFIED(Arrays.asList(DocumentPublished.class, DocumentEdited.class)),
+  PUBLISHED(Arrays.asList(DocumentPublished.class, DocumentArchived.class)),
   ARCHIVED(Collections.emptyList());
 
   private Collection<Class<? extends DocumentEvent>> possibleEvents;
@@ -30,15 +32,15 @@ public enum DocumentStatus {
   }
 
   private <EventT extends DocumentEvent> String allowedStates(Class<EventT> eventT) {
-    var statesAllowedToPerformOperation = Arrays.stream(DocumentStatus.values()).
+     Stream<DocumentStatus> statesAllowedToPerformOperation = Arrays.stream(DocumentStatus.values()).
         filter(documentStatus -> documentStatus.possibleEvents.contains(eventT));
     return String.join(" and ",
         statesAllowedToPerformOperation.map(documentStatus -> documentStatus.name().toLowerCase()).collect(Collectors.toList()));
   }
 
   private <EventT extends DocumentEvent> String operationName(Class<EventT> eventT) {
-    var pattern = Pattern.compile("^.*Document(.*)$");
-    var matcher = pattern.matcher(eventT.getName());
+    Pattern pattern = Pattern.compile("^.*Document(.*)$");
+    Matcher matcher = pattern.matcher(eventT.getName());
     matcher.find();
     return matcher.group(1).toLowerCase();
   }
